--- a/resources/beike/shop/default/css/header.scss
+++ b/resources/beike/shop/default/css/header.scss
@@ -189,7 +189,7 @@ header {
     zoom: 0.9;
     height: 23px;
     line-height: 24px;
-    background-color: #fd560f;
+    background-color: #007acc;
     color: #fff;
     border-radius: 50%;
   }
