--- a/resources/beike/shop/default/css/module/slideshow.scss
+++ b/resources/beike/shop/default/css/module/slideshow.scss
@@ -9,8 +9,8 @@
  */
 
 .swiper.module-slideshow {
-  --swiper-theme-color: #ff6600;/* Swiper */
-  --swiper-navigation-color: #ff6600;/*  */
+  --swiper-theme-color: #007acc;/* Swiper */
+  --swiper-navigation-color: #007acc;/*  */
   --swiper-navigation-size: 30px;/*  */
 
   .swiper-button-prev,.swiper-button-next {
