--- a/resources/beike/shop/default/css/bootstrap/bootstrap.scss
+++ b/resources/beike/shop/default/css/bootstrap/bootstrap.scss
@@ -8,7 +8,7 @@
  * @LastEditTime  2022-09-16 20:57:12
  */
 
-$primary: #fd560f;
+$primary: #007acc;
 $success: #71c20b;
 
 $font-size-base: 0.8rem;
